--- a/RDD.ipynb
+++ b/RDD.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_estate = pd.read_csv(r\"/Users/wilson/Desktop/Wilson/Python Course/Tony_Course/教材/course_data/Real estate.csv\")"
+    "real_estate = pd.read_csv(r\"/Users/wilson/Desktop/Wilson/Real estate.csv\")"
    ]
   },
   {
